--- a/Capstone/Capstone/Capstone.csproj
+++ b/Capstone/Capstone/Capstone.csproj
@@ -8,9 +8,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\add.png" />
+    <None Remove="Resources\BuggyLogo.png" />
+    <None Remove="Resources\clipboard.png" />
+    <None Remove="Resources\dollar.png" />
+    <None Remove="Resources\logo.png" />
+    <None Remove="Resources\settings.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.45" />
     <PackageReference Include="MaterialDesignColors" Version="2.0.6" />
     <PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\add.png" />
+    <Resource Include="Resources\BuggyLogo.png" />
+    <Resource Include="Resources\clipboard.png" />
+    <Resource Include="Resources\dollar.png" />
+    <Resource Include="Resources\logo.png" />
+    <Resource Include="Resources\settings.png" />
   </ItemGroup>
 
 </Project>
