--- a/Capstone/Capstone/Capstone.csproj
+++ b/Capstone/Capstone/Capstone.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.45" />
     <PackageReference Include="MaterialDesignColors" Version="2.0.6" />
     <PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
